--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="" />
+    <link rel="icon" href="/Pokedex/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/Pokedex/assets/index.19959c76.js"></script>
-    <link rel="stylesheet" href="/Pokedex/assets/index.672334b2.css">
+    <script type="module" crossorigin src="/Pokedex/assets/index.058e4ab5.js"></script>
+    <link rel="stylesheet" href="/Pokedex/assets/index.b168cda6.css">
   </head>
   <body>
     <div id="app"></div>
