--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/Pokedex/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <script type="module" crossorigin src="/Pokedex/assets/index.058e4ab5.js"></script>
+    <title>Pokedex</title>
+    <script type="module" crossorigin src="/Pokedex/assets/index.bd547811.js"></script>
     <link rel="stylesheet" href="/Pokedex/assets/index.b168cda6.css">
   </head>
   <body>
